--- a/examples/unvotes.qmd
+++ b/examples/unvotes.qmd
@@ -1,13 +1,12 @@
 ---
 title: "UN Votes"
-author: "Your name here"
+author: Jasprit Singh
 format: html
 ---
 
 ## Introduction
 
-How do various countries vote in the United Nations General Assembly, how have their voting patterns evolved throughout time, and how similarly or differently do they view certain issues?
-Answering these questions (at a high level) is the focus of this analysis.
+How do various countries vote in the United Nations General Assembly, how have their voting patterns evolved throughout time, and how similarly or differently do they view certain issues? Answering these questions (at a high level) is the focus of this analysis.
 
 ### Packages
 
@@ -24,8 +23,7 @@ library(unvotes)
 
 ### Data
 
-The data we're using originally come from the **unvotes** package.
-In the chunk below we modify the data by joining the various data frames provided in the package to help you get started with the analysis.
+The data we're using originally come from the **unvotes** package. In the chunk below we modify the data by joining the various data frames provided in the package to help you get started with the analysis.
 
 ```{r}
 unvotes = un_votes %>%
@@ -44,9 +42,7 @@ unvotes = un_votes %>%
 
 Let's create a data visualisation that displays how the voting record of the UK & NI changed over time on a variety of issues, and compares it to two other countries: US and Turkey.
 
-We can easily change which countries are being plotted by changing which countries the code above `filter`s for.
-Note that the country name should be spelled and capitalized exactly the same way as it appears in the data.
-See the [Appendix](#appendix) for a list of the countries in the data.
+We can easily change which countries are being plotted by changing which countries the code above `filter`s for. Note that the country name should be spelled and capitalized exactly the same way as it appears in the data. See the [Appendix](#appendix) for a list of the countries in the data.
 
 ```{r plot-yearly-yes-issue}
 #| fig.width: 10
@@ -77,4 +73,3 @@ unvotes %>%
 1.  David Robinson (2017). [unvotes](https://CRAN.R-project.org/package=unvotes): United Nations General Assembly Voting Data. R package version 0.2.0.
 2.  Erik Voeten "Data and Analyses of Voting in the UN General Assembly" Routledge Handbook of International Organization, edited by Bob Reinalda (published May 27, 2013).
 3.  Much of the analysis has been modeled on the examples presented in the [unvotes package vignette](https://cran.r-project.org/web/packages/unvotes/vignettes/unvotes.html).
-
